--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 
     <div>
- <img src="horizon.jpg" alt="decribe the image HERE for accessibility purposes" class="none" style="max-width:100%;max-height:100%";>
+ <img src="horizon.jpg" alt="decribe the image HERE for accessibility purposes" class="center-image" style="max-width:100%;max-height:100%" ;>
     </div>
 
 <br>
